Added validations for Team

--- a/app/src/main/res/layout/activity_add_new_team_member.xml
+++ b/app/src/main/res/layout/activity_add_new_team_member.xml
@@ -94,7 +94,7 @@
                 android:id="@+id/editFNameET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autofillHints="creditCardSecurityCode"
+                android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                 android:fontFamily="@font/opensans_semibold"
                 android:imeOptions="actionNext"
@@ -154,7 +154,7 @@
                 android:id="@+id/lNameET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autofillHints="creditCardSecurityCode"
+                android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                 android:fontFamily="@font/opensans_semibold"
                 android:imeOptions="actionNext"
@@ -215,7 +215,7 @@
                 android:id="@+id/emailIdET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:autofillHints="creditCardSecurityCode"
+                android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                 android:fontFamily="@font/opensans_semibold"
                 android:imeOptions="actionNext"
@@ -288,7 +288,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:fontFamily="@font/opensans_regular"
-                android:text="@string/phone_number_error_warning"
+                android:text="@string/field_required"
                 android:textColor="@color/error_red"
                 android:textSize="@dimen/_10ssp" />
         </LinearLayout>
