--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -104,7 +104,8 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
                             android:inputType="text|textCapSentences"
-                            android:maxLength="50"
+                            android:ellipsize="end"
+                            android:maxEms="21"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
                             android:singleLine="true"
@@ -315,7 +316,7 @@
                             android:id="@+id/etCity"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:autofillHints="creditCardSecurityCode"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
@@ -327,7 +328,7 @@
                             android:textColor="@color/primary_black"
                             android:textColorHint="@color/light_gray"
                             android:textSize="@dimen/_12ssp"
-                            android:textCursorDrawable="@drawable/cursor_color"/>
+                            android:textCursorDrawable="@drawable/cursor_color" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -466,7 +467,7 @@
                             android:id="@+id/etZipcode"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:autofillHints="creditCardSecurityCode"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:digits="1234567890"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionDone"
