--- a/app/src/main/res/layout/activity_gift_card_details.xml
+++ b/app/src/main/res/layout/activity_gift_card_details.xml
@@ -178,14 +178,14 @@
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:imeOptions="actionNext"
-                                    android:inputType="numberDecimal"
+                                    android:inputType="number"
                                     android:maxLength="@string/maxlength"
                                     android:padding="@dimen/_14sdp"
                                     android:textColor="@color/text_color"
                                     android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursor_color"
                                     android:textSize="@dimen/_12ssp"
-                                    android:autofillHints="creditCardSecurityCode"/>
+                                    android:autofillHints="AUTOFILL_HINT_SMS_OTP"/>
 
                             </com.google.android.material.textfield.TextInputLayout>
                         </RelativeLayout>
@@ -246,7 +246,7 @@
                             android:textCursorDrawable="@drawable/cursor_color"
                             android:textIsSelectable="false"
                             android:textSize="@dimen/_12ssp"
-                            android:autofillHints="creditCardSecurityCode"/>
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -303,7 +303,7 @@
                             android:textColorHint="@color/light_gray"
                             android:textCursorDrawable="@drawable/cursor_color"
                             android:textSize="@dimen/_12ssp"
-                            android:autofillHints="creditCardSecurityCode"/>
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
 
